force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>An Invoice contains data on an incentivized purchase and may comprise one or more Invoice Items.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Invoice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>