force-app/main/default/objects/Invoice__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The total price of all incentivized items on an Invoice. When Request Invoice Products is on in the Member&#39;s Program, this field will be calculated automatically as the sum of the prices of the Invoice Items. Otherwise, the Member will enter this amount directly into the form.</description>
    <inlineHelpText>Enter the total amount shown on the invoice, less any taxes and non-qualifying items.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>