force-app/main/default/objects/Invoice__c/fields/ApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDate__c</fullName>
    <description>The date and time at which an Invoice was approved. This will be blank if the Invoice has been rejected or not yet approved. If Request Invoice Authorization is off in the Member&#39;s Program, this will be the submission date of the Invoice.</description>
    <inlineHelpText>This is the date and time the Invoice was approved (if applicable).</inlineHelpText>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>