force-app/main/default/objects/Invoice__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Any remarks about an Invoice. Internal use only.</description>
    <inlineHelpText>Remarks about this Invoice. Internal use only.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>