force-app/main/default/objects/Invoice__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date an Invoice was issued.</description>
    <inlineHelpText>Select the date the invoice was issued.</inlineHelpText>
    <label>Date of Issue</label>
    <type>Date</type>
</CustomField>