force-app/main/default/objects/Invoice__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of an Invoice.</description>
    <inlineHelpText>Enter a description that will help you identify this invoice later on.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>