force-app/main/default/objects/Invoice__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce Account of the issuer of an Invoice.</description>
    <inlineHelpText>Enter the issuer of the invoice. This must be an Account in your org.</inlineHelpText>
    <label>Seller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>