force-app/main/default/objects/Invoice__c/fields/HasDetails__c.field-meta.xml
<CustomField>
    <fullName>HasDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Invoice was created with Invoice Items. This will be the case when Request Invoice Products is on in the Member&#39;s Program. Internal use only.</description>
    <inlineHelpText>When checked, the Invoice was created with Invoice Items.</inlineHelpText>
    <label>Has Details</label>
    <type>Checkbox</type>
</CustomField>