force-app/main/default/objects/Invoice__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>The image of an Invoice.</description>
    <label>Image</label>
    <length>18</length>
    <type>Text</type>
</CustomField>