force-app/main/default/objects/Invoice__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>The invoice number shown on an Invoice.</description>
    <inlineHelpText>Enter the invoice number shown on the invoice.</inlineHelpText>
    <label>Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>