force-app/main/default/objects/Invoice__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>The Program that the Member who made the purchase is a part of.</description>
    <formula>Member__r.FieloPLT__Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Program that the Member who made the purchase is a part of.</inlineHelpText>
    <label>Program</label>
    <type>Text</type>
</CustomField>