force-app/main/default/objects/Invoice__c/fields/RejectReason__c.field-meta.xml
<CustomField>
    <fullName>RejectReason__c</fullName>
    <description>Remarks about why an Invoice was rejected.</description>
    <inlineHelpText>These are remarks about why the invoice was rejected.</inlineHelpText>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Amount</fullName>
            </value>
            <value>
                <fullName>Invalid Image</fullName>
            </value>
            <value>
                <fullName>No Image Attached</fullName>
            </value>
            <value>
                <fullName>Missing Products</fullName>
            </value>
            <value>
                <fullName>Bad invoice quality</fullName>
                <isActive>false</isActive>
                <label>Bad invoice quality</label>
            </value>
            <value>
                <fullName>Content doesn&#39;t fit with the image</fullName>
                <isActive>false</isActive>
                <label>Content doesn&#39;t fit with the image</label>
            </value>
            <value>
                <fullName>Wrong invoice image</fullName>
                <isActive>false</isActive>
                <label>Wrong invoice image</label>
            </value>
            <value>
                <fullName>Wrong price</fullName>
                <isActive>false</isActive>
                <label>Wrong price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>