force-app/main/default/objects/Invoice__c/fields/UniqueKeyField__c.field-meta.xml
<CustomField>
    <fullName>UniqueKeyField__c</fullName>
    <description>The unique key of an Invoice. Internal use only.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the unique key of this invoice. Internal use only.</inlineHelpText>
    <label>Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>