force-app/main/default/objects/Invoice__c/validationRules/ValidateMember.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateMember</fullName>
    <active>true</active>
    <description>New Invoices must be associated with a Member.</description>
    <errorConditionFormula>AND(
 ISNEW(),
 ISBLANK(  Member__c  )
)</errorConditionFormula>
    <errorMessage>New Invoices must be associated with a Member.</errorMessage>
</ValidationRule>