force-app/main/default/objects/Invoice__c/validationRules/ValidateMemberUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateMemberUpdate</fullName>
    <active>true</active>
    <description>You cannot change the Member associated with this Invoice.</description>
    <errorConditionFormula>AND( 
ISCHANGED(  Member__c ), 
NOT(ISBLANK(PRIORVALUE(Member__c ))), 
PRIORVALUE(Member__c )!=Member__c 
)</errorConditionFormula>
    <errorMessage>You cannot change the Member associated with this Invoice.</errorMessage>
</ValidationRule>