force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InvoiceNumber__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Member__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>